fix spacing and centered footer text

--- a/profile-syle.css
+++ b/profile-syle.css
@@ -38,6 +38,7 @@ section{
     position:relative;
     
     
+    
 }
 
 .icon{
@@ -88,18 +89,22 @@ h2{
     
 }
 
-#bcolor3{
-   background-color:rgb(51,51,51);
-   width:100%;
-   height:60px;
-   position: relative;
+
+  
+
+
+footer{
+    display: block;
+    background-color:rgb(51,51,51);
+    width:100%;
+    height:60px;
+    
+    
 }
-
-
 #copyright{
+    width:100%;
     color:white;
-    position:absolute;
-   margin:15px;
-   margin-left:40%;
+   margin:20px;
+   position:absolute;
    
 }
